Fix selected bus stop bubble spacing

--- a/UI/src/less/site/asset-layer.less
+++ b/UI/src/less/site/asset-layer.less
@@ -53,7 +53,7 @@
 
   .field {
     display: table-cell;
-    vertical-align: middle;
+    vertical-align: top;
   }
 
   &:before {
@@ -73,6 +73,7 @@
   .bus-stop-name {
     color: #a4a4a2;
     white-space: nowrap;
+    padding-right: 5px;
   }
 }
 
